--- a/index.html
+++ b/index.html
@@ -10,34 +10,35 @@
     <link href="https://fonts.googleapis.com/css2?family=Kode+Mono:wght@400..700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>HTML táblázatok formázása</h1>
-    <hr>
-    <table class="table">
-        <thead>
-            <tr>
-                <th>#</th>
-                <th>Név</th>
-                <th>Lakcím</th>
-                <th>Beosztás</th>
-                <th>Órabér (Ft)</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>1.</td>
-                <td>Béla</td>
-                <td>Baja</td>
-                <td>Portás</td>
-                <td>2500</td>
-            </tr>
-            <tr>
-                <td>2.</td>
-                <td>Pityesz</td>
-                <td>Kunbaja</td>
-                <td>Boxoló</td>
-                <td>3000</td>
-            </tr>
-            <tr>
+    <div id="container">
+        <h1>HTML táblázatok formázása</h1>
+        <hr>
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>#</th>
+                    <th>Név</th>
+                    <th>Lakcím</th>
+                    <th>Beosztás</th>
+                    <th>Órabér (Ft)</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>1.</td>
+                    <td>Béla</td>
+                    <td>Baja</td>
+                    <td>Portás</td>
+                    <td>2500</td>
+                </tr>
+                <tr>
+                    <td>2.</td>
+                    <td>Pityesz</td>
+                    <td>Kunbaja</td>
+                    <td>Boxoló</td>
+                    <td>3000</td>
+                </tr>
+                <tr>
                 <td>3.</td>
                 <td>Laci</td>
                 <td>Budapest</td>
@@ -65,5 +66,6 @@
             </tr>
         </tfoot>
     </table>
+</div>
 </body>
 </html>
